NIM-22464 Check Point improved NTP data collection

--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -35,7 +35,7 @@ description: In this section, you can find the release notes for `v7.` releases.
 
 ### Improvements
 
-.
+
 
 #### Technology Tables
 
@@ -51,7 +51,7 @@ description: In this section, you can find the release notes for `v7.` releases.
 
 #### Vendor Support
 
-.
+- **Check Point Gaia** -- Improved NTP data collection by supporting the  extended `ntpq` command, providing detailed NTP source information. For more details, see [Extend command to get better NTP results](../../support/known_issues/Vendors/checkpoint.md#extend-command-to-get-better-ntp-results).
 
 ### API Endpoint Deprecation
 
