--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -47,7 +47,10 @@ description: In this section, you can find the release notes for `v7.` releases.
 
 #### Path Lookup
 
-.
+Path Lookup has been extended to support IPv6 for both Unicast and Host to Gateway scenarios. The following technologies are now supported for IPv6 path analysis: routing, security evaluation, 6in4, GRE, and IPsec. NAT and PBR are not yet supported for IPv6 lookups.
+
+![release_7.9_ipv6_pathlookup.webp](../../images/miscellaneous/release_7.9_ipv6_pathlookup.webp)
+
 
 #### Vendor Support
 
