--- a/docs/releases/release_notes_low-level/7.x/7.5.md
+++ b/docs/releases/release_notes_low-level/7.x/7.5.md
@@ -6,7 +6,27 @@ search:
 
 # LLRN 7.5
 
-These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 978 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 992 fixed issues.
+
+## 7.5.13
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-20937` -- High -- Obsolete manual links appear in the graph
+- `NIM-21643` -- High -- Cannot save Discovery Settings: "Entry already exists in the collection" (Vendor API)
+- `NIM-21679` -- Highest -- Azure vnet - Host to Gateway lookup fails
+- `NIM-21966` -- High -- Duplex Mismatch status filtering is broken
+- `NIM-22197` -- High -- NX-OS - Missing routes
+- `NIM-22214` -- Medium -- IPF shows Meraki SSIDs on APs with radio status UP, but not enabled or configured.
+- `NIM-22285` -- Medium -- Change family for 3com Baseline Switch 2928
+- `NIM-22308` -- High -- Attribute filtering doesn't work properly when a device has multiple custom attributes
+- `NIM-22357` -- Medium -- ABTaskMapResultError: "[4].neiAddressV6" must be of type object
+- `NIM-22361` -- Medium -- [Gaia-Embedded] Summary of Issues
+- `NIM-22362` -- Medium -- ABNoConfig: Couldn't get platform/model for cisco (ios-xe), ValidationError: "model" is required
+- `NIM-22378` -- High -- Meraki MS - Device not discovered
+- `NIM-22383` -- High -- FS - NTP sync displays inaccurately
 
 ## 7.5.12
 
@@ -28,6 +48,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-22148` -- Medium -- New vendor can't be added from Snapshot Creation
 - `NIM-22160` -- High -- Not sending `_cmdline-mode on` for 3Com devices
 - `NIM-22170` -- High -- BC: Uptime not valid Integer
+- `NIM-22191` -- High -- Huawei YS - Error: Can't get OS version
 - `NIM-22201` -- High -- Arista ip helper-address is not parsed/visible in IPF GUI
 - `NIM-22225` -- High -- Restore snapshot functionality does not work
 
@@ -172,7 +193,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-9638` -- Medium -- cisco stack - environment information (power supplies and fans)
 - `NIM-15077` -- Highest -- AWS TGW - VPC attachment routes refactor (static & propagated)
 - `NIM-15229` -- High -- Investigate wrong BGP neighbor information in BGP Neighbors table when devices have same IPs (blocked - pending PSQL query refactor)
-- `NIM-20966` -- Highest -- Scanner not working as expected.
+- `NIM-20966` -- Highest -- Scanner not working as expected [7.8]
 - `NIM-21068` -- High -- Inventory - EoL Milestones - Duplicate entries still seen
 - `NIM-21071` -- High -- Path Lookup shows incorrect Passing Traffic value
 - `NIM-21173` -- Highest -- Cisco ACI - get correct sPcTag for transparent firewall on ingress leaf
@@ -342,7 +363,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-21002` -- High -- API clients to not destroy on a data request's Authorization error
 - `NIM-21015` -- High -- BGP Advertised Routes still failing
 - `NIM-21037` -- Medium -- getFhrpGroupMembersTable - MISMATCHED objects with same itemId
-- `NIM-21059` -- Highest -- Configuration import does not overwrite the discovery settings
 
 ### Tasks
 
@@ -351,7 +371,9 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-19050` -- Medium -- 10 - Moderate - Broken Access Controls
 - `NIM-20231` -- Medium -- Relculate intent checks after import is successful
 - `NIM-20350` -- Low -- Fix failing tests for table management/snmp/communities (valid)
+- `NIM-20356` -- Low -- Fix failing tests for table settings/ports (valid)
 - `NIM-20386` -- Medium -- Fix partitions for calcFromApClientsWhichAreNotInArp
+- `NIM-20389` -- Medium -- Fix partitions for getDeviceAttributeValues
 - `NIM-20395` -- Medium -- Fix partitions for getMplsL2VpnPseudowiresTable
 - `NIM-20396` -- Medium -- Fix partitions for getPlatformsClusterSrxTable
 - `NIM-20397` -- Medium -- Fix partitions for getRoutingProtocolsOspfNeighborsTable
@@ -572,7 +594,7 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-18856` -- High -- Add support for F5OS - basic vendor discovery of chassis information [7.5]
 - `NIM-18869` -- Medium -- Discover Cisco 9300 switches running in cloud-native mode via Meraki API
 - `NIM-18897` -- Medium -- Cloud scaling groups [7.5]
-- `NIM-18984` -- Medium -- Cloud subnets discovery 7.8
+- `NIM-18984` -- Medium -- Cloud subnets discovery [7.8]
 - `NIM-19003` -- Medium -- v6 support for BGP Advertised Routing task
 - `NIM-19078` -- Medium -- Syslogworker improvements
 - `NIM-19087` -- High -- Fix PSQL Pathlookup Failing Tests
@@ -904,7 +926,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-16688` -- High -- Utilize Chromatic visual testing for Storybook - Execution Phase 1
 - `NIM-16703` -- Medium -- Apply attribute filters to Pathlookup sources endpoints
 - `NIM-17378` -- High -- Azure NAT Gateway - NAT support
-- `NIM-17451` -- Medium -- [FE] Extend discovery seeds settings – discovery history
+- `NIM-17451` -- Medium -- Extend discovery seeds settings – discovery history
 - `NIM-17529` -- Medium -- Add support for AAA on Cisco ACI (IPv4+IPv6)
 - `NIM-17537` -- Medium -- Add support for SNMP on Cisco ACI (IPv4 + IPv6)
 - `NIM-17542` -- Medium -- Add support for IPv6 ACL on Cisco IOS-XE
@@ -924,7 +946,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-18069` -- Medium -- Move `putSiteSeparationHandler` to ORM
 - `NIM-18070` -- Medium -- Move `sendParsingErrorsToCallhome` to ORM
 - `NIM-18081` -- Medium -- Unique serial number field in Interface table
-- `NIM-18115` -- Medium -- [FE] Add VRF as a possible linecap label to all L3 protocols
+- `NIM-18115` -- Medium -- Add VRF as a possible linecap label to all L3 protocols
 - `NIM-18209` -- Low -- Include paths with parameters in generated api client
 - `NIM-18210` -- Medium -- Include tables in generated api client
 - `NIM-18227` -- Medium -- Bring our ssh2 fork up to date
@@ -949,7 +971,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-18802` -- Medium -- Create a variant of Select component with mandatory value
 - `NIM-18811` -- Medium -- URL Filtering is not shown in the ZoneFW Table
 - `NIM-18812` -- High -- Analyse getArangoModels in API Controllers - PART 2
-- `NIM-18842` -- Medium -- [FE] Rename "Snapshot Retention" page
+- `NIM-18842` -- Medium -- Rename "Snapshot Retention" page
 - `NIM-18853` -- Medium -- F5OS API clients and basic backend support
 - `NIM-18854` -- Medium -- F5OS API Clients frontend and full backend support
 - `NIM-18884` -- Medium -- Update Intent Rules
@@ -960,15 +982,15 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-18915` -- Medium -- Cisco APIC - service graph - extend redirection for vlan
 - `NIM-18918` -- Medium -- Make Sentry display the original error text
 - `NIM-18920` -- Medium -- Re-enable UI system update notifications
-- `NIM-18921` -- Medium -- [backend] make links in diagram bi-directional
+- `NIM-18921` -- Medium -- make links in diagram bi-directional
 - `NIM-18922` -- Medium -- Test F5OS All tenants on one server need to be discovered (prevent SN duplicates)
 - `NIM-18923` -- High -- [backend] Add support for manual link portchannels in e2e
 - `NIM-18926` -- Medium -- Compress large received data items
 - `NIM-18933` -- Medium -- Convert arango export to PSQL
 - `NIM-18941` -- Medium -- Invalidate callhome commands older than 6.8 and tasks older than 6.9
-- `NIM-18946` -- Medium -- [Backend] Add Postgres implementation for manual links and virtual wire in e2e
+- `NIM-18946` -- Medium -- Add Postgres implementation for manual links and virtual wire in e2e
 - `NIM-18947` -- Medium -- Investigate and fix getMacAqlNoTagOnRouter (arangoTaskerCalcSwitchRouterVlansDataProvider)
-- `NIM-18948` -- High -- [BE] Perform MAC lookup for traffic sending over manual link
+- `NIM-18948` -- High -- Perform MAC lookup for traffic sending over manual link
 - `NIM-18958` -- High -- Bidirectional manual links create loops
 - `NIM-18959` -- Medium -- AWS API - syntax check for all assume roles
 - `NIM-18971` -- Medium -- Fix `getAllSnapshots` query failing tests
@@ -979,7 +1001,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-18994` -- Medium -- AWS subnets
 - `NIM-18995` -- Medium -- GCP subnets
 - `NIM-19017` -- Highest -- Investigate failing e2e pathlookup tests in postgres mode
-- `NIM-19028` -- Medium -- [backend] Manual link constrain validation - avoid create two links between same devices and same ports, links are bidirectional by default
+- `NIM-19028` -- Medium -- Manual link constrain validation - avoid create two links between same devices and same ports, links are bidirectional by default
 - `NIM-19047` -- High -- 7 - Important - IPF License Key World-Readable
 - `NIM-19048` -- High -- 8 - Important - Sensitive Information Disclosed in System Logs
 - `NIM-19066` -- Medium -- Finish RFC21 (Independent product versioning) and create implementation tasks stemming from RFC
@@ -1042,7 +1064,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-19299` -- Medium -- Optimize "/tables/interfaces/port-channel/member-status" API table performance when many snapshots are loaded
 - `NIM-19300` -- Medium -- Optimize "/tables/inventory/phones" API table performance when many snapshots are loaded
 - `NIM-19301` -- Medium -- [frontend] Prepare manual link scenario for MQ
-- `NIM-19302` -- High -- [FE] Redesign Snapshot Management to better show more loaded snapshots
+- `NIM-19302` -- High -- Redesign Snapshot Management to better show more loaded snapshots
 - `NIM-19318` -- Medium -- Switch Postgres feature flags on by default
 - `NIM-19319` -- Medium -- Switch OAS to be generated from PSQL
 - `NIM-19322` -- Medium -- Fix `getApClientByHash` query failing tests
@@ -1163,4 +1185,3 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 - `NIM-19487` -- Medium -- F5OS - network - l2/l3 interfaces (RSeries)
 - `NIM-19581` -- Medium -- F5OS - network - neighbors - Velos
 - `NIM-19582` -- Medium -- F5OS - network - neighbors - RSeries
-
