NIM-21465 Adds documentation about GCP serverless services table

--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -39,7 +39,12 @@ description: In this section, you can find the release notes for `v7.` releases.
 
 #### Technology Tables
 
-.
+##### New Tables
+
+- **Cloud Serverless Services** table under vendor-specific table
+  [**Technology → Cloud → Vendors → GCP → Serverless Services**](../../IP_Fabric_GUI/technology_tables/cloud/vendors.md)
+  covering **App Engine**, **Cloud Function**, and **Cloud Run**.
+
 
 #### GUI
 
