Improve 7.8 RN, add LLRN 7.8 and update version policy

--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -6,7 +6,17 @@ search:
 
 # LLRN 7.3
 
-These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 665 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 668 fixed issues.
+
+## 7.3.25
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-21643` -- High -- Cannot save Discovery Settings: "Entry already exists in the collection" (Vendor API)
+- `NIM-22201` -- High -- Arista ip helper-address is not parsed/visible in IPF GUI
+- `NIM-22351` -- Medium -- Aruba - 503H APs are not discovered - Backport to 7.3
 
 ## 7.3.24
 
