--- a/docs/releases/release_notes_low-level/7.x/7.5.md
+++ b/docs/releases/release_notes_low-level/7.x/7.5.md
@@ -6,7 +6,27 @@ search:
 
 # LLRN 7.5
 
-These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 978 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 992 fixed issues.
+
+## 7.5.13
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-20937` -- High -- Obsolete manual links appear in the graph
+- `NIM-21643` -- High -- Cannot save Discovery Settings: "Entry already exists in the collection" (Vendor API)
+- `NIM-21679` -- Highest -- Azure vnet - Host to Gateway lookup fails
+- `NIM-21966` -- High -- Duplex Mismatch status filtering is broken
+- `NIM-22197` -- High -- NX-OS - Missing routes
+- `NIM-22214` -- Medium -- IPF shows Meraki SSIDs on APs with radio status UP, but not enabled or configured.
+- `NIM-22285` -- Medium -- Change family for 3com Baseline Switch 2928
+- `NIM-22308` -- High -- Attribute filtering doesn't work properly when a device has multiple custom attributes
+- `NIM-22357` -- Medium -- ABTaskMapResultError: "[4].neiAddressV6" must be of type object
+- `NIM-22361` -- Medium -- [Gaia-Embedded] Summary of Issues
+- `NIM-22362` -- Medium -- ABNoConfig: Couldn't get platform/model for cisco (ios-xe), ValidationError: "model" is required
+- `NIM-22378` -- High -- Meraki MS - Device not discovered
+- `NIM-22383` -- High -- FS - NTP sync displays inaccurately
 
 ## 7.5.12
 
@@ -28,6 +48,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-22148` -- Medium -- New vendor can't be added from Snapshot Creation
 - `NIM-22160` -- High -- Not sending `_cmdline-mode on` for 3Com devices
 - `NIM-22170` -- High -- BC: Uptime not valid Integer
+- `NIM-22191` -- High -- Huawei YS - Error: Can't get OS version
 - `NIM-22201` -- High -- Arista ip helper-address is not parsed/visible in IPF GUI
 - `NIM-22225` -- High -- Restore snapshot functionality does not work
 
@@ -172,7 +193,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-9638` -- Medium -- cisco stack - environment information (power supplies and fans)
 - `NIM-15077` -- Highest -- AWS TGW - VPC attachment routes refactor (static & propagated)
 - `NIM-15229` -- High -- Investigate wrong BGP neighbor information in BGP Neighbors table when devices have same IPs (blocked - pending PSQL query refactor)
-- `NIM-20966` -- Highest -- Scanner not working as expected.
+- `NIM-20966` -- Highest -- Scanner not working as expected [7.8]
 - `NIM-21068` -- High -- Inventory - EoL Milestones - Duplicate entries still seen
 - `NIM-21071` -- High -- Path Lookup shows incorrect Passing Traffic value
 - `NIM-21173` -- Highest -- Cisco ACI - get correct sPcTag for transparent firewall on ingress leaf
@@ -573,7 +594,7 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-18856` -- High -- Add support for F5OS - basic vendor discovery of chassis information [7.5]
 - `NIM-18869` -- Medium -- Discover Cisco 9300 switches running in cloud-native mode via Meraki API
 - `NIM-18897` -- Medium -- Cloud scaling groups [7.5]
-- `NIM-18984` -- Medium -- Cloud subnets discovery 7.8
+- `NIM-18984` -- Medium -- Cloud subnets discovery [7.8]
 - `NIM-19003` -- Medium -- v6 support for BGP Advertised Routing task
 - `NIM-19078` -- Medium -- Syslogworker improvements
 - `NIM-19087` -- High -- Fix PSQL Pathlookup Failing Tests
