--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -1,8 +1,8 @@
 ---
-description: In this section, you can find the release notes for `v7.8` releases.
+description: In this section, you can find the release notes for v7.8 releases.
 ---
 
-# IP Fabric `v7.8`
+# IP Fabric v7.8
 
 !!! danger "Unreleased Version"
 
@@ -20,17 +20,24 @@ description: In this section, you can find the release notes for `v7.8` releases
 - For GCP interconnect paths, the Cloud Router (control plane) appears in the
   path lookup. This will be updated in a future release.
 
-## `v7.8.X` (UNRELEASED)
+## v7.8.3 (December 17th, 2025; EA)
 
-.
-
-### Fixes
-
-.
-
-## `v7.8.0` (UNRELEASED)
-
-.
+```
+SHA256 (ipfabric-update-7-8-3+0.tar.zst.sig) = dd3962d602c8bcf21833ff49dc6b94a14c7d2a29343d6376eb4407d056542697
+MD5 (ipfabric-update-7-8-3+0.tar.zst.sig) = 6dffeda7b199bd0b525188d32e5ee8e2
+SHA256 (ipfabric-7-8-3+0.qcow2) = e4d3e4e4d02d97383e3316625baab8a02c90c00cc47dd141d0de53a1c0a2a3e7
+MD5 (ipfabric-7-8-3+0.qcow2) = 77d6edbabed4a5f4962d39ca68f44b11
+SHA256 (ipfabric-7-8-3+0.vmdk) = 06fc8bdbad31cf7e01c58536505f4ea9a8716c54b46c53134a2af5e8ee00a3d5
+MD5 (ipfabric-7-8-3+0.vmdk) = da51db34bd0680faa4b0432de64a568e
+SHA256 (ipfabric-7-8-3+0.vhdx.zst) = 5ed330ca8bf01ad0267730087ac1307fbc816175318bbc598c9b0f12ab0149ae
+MD5 (ipfabric-7-8-3+0.vhdx.zst) = f789d46713c6610a060ab616ed1aff74
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-8-3+0.ova) = 73686a4ce968eb85f4deb0cadec2f45d590d0eea1db7761b9ffa4b463d5bcb31
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-8-3+0.ova) = 6d7c11c84a967e7b13a9b243736ebd8c
+SHA256 (unsupported-ESXi7.0-ipfabric-7-8-3+0.ova) = 0b2b300826a01bc766bac17ac10f4211ba1fe6551f0825c87d1350388c61cac8
+MD5 (unsupported-ESXi7.0-ipfabric-7-8-3+0.ova) = 6d6ff9452d317c6cfac89f2e7c165b31
+SHA256 (ESXi8.0-ipfabric-7-8-3+0.ova) = 5adfc5fcf03bcf8a1d9f01330432777b7a05136b0ffc01270584fe583ff69265
+MD5 (ESXi8.0-ipfabric-7-8-3+0.ova) = 3708f83d0f4d322ca5912a98b501c699
+```
 
 ### New Features
 
@@ -47,6 +54,10 @@ A new command-line tool `/opt/ipf-system-upgrade/bin/cli` now enables
 performing system upgrades in the same way as through the web interface.
 
 ### Improvements
+
+#### Major Snapshot Processing Performance Improvement
+
+We resolved a major performance bottleneck affecting snapshot processing. Previously, each additional loaded snapshot could [significantly increase post-discovery calculation time](7.5.md#performance-limitations). With the new optimizations, the impact is now reduced to just **~0.5–1% per loaded snapshot**, delivering a dramatic performance improvement.
 
 #### API Logging
 
