--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v7.x.x/7.3.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v7.x.x/7.3.md
@@ -48,24 +48,32 @@ issue is resolved in one of the upcoming releases.
 
 ![Disable NAT44 discovery task for FortiGate](../../../../images/miscellaneous/archive/releases-release_notes-previous_releases-IP_Fabric_v7.x.x-7.2_7.2_disabled_task_forti_nat44.webp)
 
-## v7.3.24 (November 27th, 2025; GA)
+## v7.3.25 (December 17th, 2025; GA)
 
 ```
-SHA256 (ipfabric-update-7-3-24+0.tar.zst.sig) = 0abea2561b048120720518a71bf38f3d725822c3067932b605a6f1e4ca834d07
-MD5 (ipfabric-update-7-3-24+0.tar.zst.sig) = 4f6ae91606fa49db0762ebcf2fe060c4
-SHA256 (ipfabric-7-3-24+0.qcow2) = 25b43573dc85ffa5bd57bcafc14bd3b9df519c8eff7d2c0d3c78c3b9b952b9dd
-MD5 (ipfabric-7-3-24+0.qcow2) = 09e9563f1e16bd4d7427b3d264541d56
-SHA256 (ipfabric-7-3-24+0.vmdk) = 4aa6329a46670f486eda38679d56b169aa616571a7b26700db712aac6c7ccf15
-MD5 (ipfabric-7-3-24+0.vmdk) = 62cfd4836931604f9851d1f88f231c7f
-SHA256 (ipfabric-7-3-24+0.vhdx.zst) = 4a225f8d80e881bc5fb5d0b4f5beaccf88e3fb788686ebb20a7f550679f51cfa
-MD5 (ipfabric-7-3-24+0.vhdx.zst) = c33a229ffa8a6e79776508f9a0c2832e
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-24+0.ova) = aa1bccfac882451880882b56a821425b6a9d93f974b7e3336893cef753863f51
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-24+0.ova) = 5b5062daee42b9cfc5bb4c13f01c3c0a
-SHA256 (unsupported-ESXi7.0-ipfabric-7-3-24+0.ova) = f2678d1e428f026dd956259392021977f29cced05d7177d80efa5cc0f94f8dac
-MD5 (unsupported-ESXi7.0-ipfabric-7-3-24+0.ova) = 4c1a9f4087a41807197c032a2fff8cca
-SHA256 (ESXi8.0-ipfabric-7-3-24+0.ova) = 16f58d9d63a0e3b8e3d3eaee8bebf207e61f17374864c43893456665611d49a3
-MD5 (ESXi8.0-ipfabric-7-3-24+0.ova) = 37820bcfb30d96d8ca893b7877dbbea7
+SHA256 (ipfabric-update-7-3-25+0.tar.zst.sig) = e0237559cff2147e7ef580671ebdd5c385ba2447e42474c9782aa9c0cdad51f8
+MD5 (ipfabric-update-7-3-25+0.tar.zst.sig) = 3a2554f2c1dbe3e731918cd2f6d3ccc8
+SHA256 (ipfabric-7-3-25+0.qcow2) = a3b5fe16fe6393e722d263e9738f710a4dfac9d31cb9b5b4ad3f02b00a33d85a
+MD5 (ipfabric-7-3-25+0.qcow2) = b7ee956aa9c63e0976ed80e6d36a3cb4
+SHA256 (ipfabric-7-3-25+0.vmdk) = 424fe33a94142f0d8d888e4aa5c66f1319c7a250b28f40cbc341658cb594f5e1
+MD5 (ipfabric-7-3-25+0.vmdk) = 947cb0e07c790ac3c44c398ada703096
+SHA256 (ipfabric-7-3-25+0.vhdx.zst) = 1c4837af911bb72c915fb965d2805520743812a97e821410df0221d9590e1443
+MD5 (ipfabric-7-3-25+0.vhdx.zst) = fbd4e5f30a0974e0a05435f051633f19
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-25+0.ova) = 9c84682b7b04a12ce77ba3f64a685ef58cfa5e0e46068470c707d1310194dc70
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-25+0.ova) = c493c46705f8e84bcc4fd39b392618e0
+SHA256 (unsupported-ESXi7.0-ipfabric-7-3-25+0.ova) = c1fc4e0ecae6fde9decf75452d39d6d7ae7a34bd1b13243ba7322fdc6c77a6fc
+MD5 (unsupported-ESXi7.0-ipfabric-7-3-25+0.ova) = 9de90949f7604a4c9ca6c03bc671da04
+SHA256 (ESXi8.0-ipfabric-7-3-25+0.ova) = 50cb2d3029e7d056a37126e6a2c62d680782a4c0eb560d2f5a37a0766e8c6f38
+MD5 (ESXi8.0-ipfabric-7-3-25+0.ova) = ff8f00c0a01bc1363ae29304e512e150
 ```
+
+### Bug Fixes
+
+- Improved error handling for duplicate Vendor API settings. A clear error message (`Entry already exists in the collection`) is now shown, and the duplicate entry must be removed before saving.
+- Corrected parsing of `ip helper-address` on Arista EOS devices so values are visible in technology tables.
+- Fixed discovery of Aruba 503H access points.
+
+## v7.3.24 (November 27th, 2025; GA)
 
 ### Bug Fixes
 
