NIM-21588 Azure DNS and Load-balancing [7.9]

--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -44,6 +44,10 @@ description: In this section, you can find the release notes for `v7.` releases.
 - **Cloud Serverless Services** table under vendor-specific table
   [**Technology → Cloud → Vendors → GCP → Serverless Services**](../../IP_Fabric_GUI/technology_tables/cloud/vendors.md)
   covering **App Engine**, **Cloud Function**, and **Cloud Run**.
+- **Virtual Servers** - **Path Rules** table under Load Balancing [**Technology → Load-balancing**](../../IP_Fabric_GUI/technology_tables/load_balancing.md#virtual-servers---path-rules).
+- **DNS** table under [**Technology → Cloud → Vendors → Azure**](../../IP_Fabric_GUI/technology_tables/cloud/vendors.md#azure).
+
+
 
 
 #### GUI
