NIM-22480 Updates known issues for GCP in release notes for release/7.8

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -17,8 +17,9 @@ description: In this section, you can find the release notes for v7.8 releases.
 
 ### Google Cloud Platform (GCP)
 
-- For GCP interconnect paths, the Cloud Router (control plane) appears in the
+- For Interconnect paths, the Cloud Router (control plane) appears in the
   path lookup. This will be updated in a future release.
+- VPCs with subnets that share the same name across different regions show only one interface with that name in the table, and a Discovery Issue indicates that the interface is duplicated in the output. This will be updated in a future release.
 
 ## v7.8.3 (December 17th, 2025; EA)
 
