NIM-19764 Add release note for e2e cloud without w/o interface

--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -60,6 +60,11 @@ Path Lookup has been extended to support IPv6 for both Unicast and Host to Gatew
 
 ![release_7.9_ipv6_pathlookup.webp](../../images/miscellaneous/release_7.9_ipv6_pathlookup.webp)
 
+Path Lookup has been extended to support Layer 3 routing between cloud-only devices with no interface names.
+
+![release_7.9_cloud_routing_without_interface_in_e2e.webp](../../images/miscellaneous/release_7.9_cloud_routing_without_interface_in_e2e.webp)
+
+
 
 #### Vendor Support
 
