Added cloud release notes for 7.9

--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -15,7 +15,9 @@ description: In this section, you can find the release notes for `v7.` releases.
 
 ## Known Issues
 
-.
+### Google Cloud Platform (GCP)
+
+- Using separate Vendor API configurations to discover the Shared VPC host and service projects leads to inconsistent results. This will be fixed in a future release. 
 
 ## `v7.9.X` (UNRELEASED)
 
@@ -69,6 +71,8 @@ Path Lookup has been extended to support Layer 3 routing between cloud-only devi
 #### Vendor Support
 
 - **Check Point Gaia** -- Improved NTP data collection by supporting the  extended `ntpq` command, providing detailed NTP source information. For more details, see [Extend command to get better NTP results](../../support/known_issues/Vendors/checkpoint.md#extend-command-to-get-better-ntp-results).
+- **GCP** -- Added support for VPC Network Peering configured between VPC networks in different Google Cloud projects.
+- **Azure** -- Improved security evaluation for Azure Firewall.
 
 ### API Endpoint Deprecation
 
