NIM-21914 NIM-22390 and 7.9 cleanup

--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -1,8 +1,8 @@
 ---
-description: In this section, you can find the release notes for `v7.` releases. To see this page, please update `.pages.yml`.
+description: In this section, you can find the release notes for v7.9 releases.
 ---
 
-# IP Fabric `v7.9`
+# IP Fabric v7.9
 
 !!! danger "Unreleased Version"
 
@@ -19,25 +19,21 @@ description: In this section, you can find the release notes for `v7.` releases.
 
 - Using separate Vendor API configurations to discover the Shared VPC host and service projects leads to inconsistent results. This will be fixed in a future release. 
 
-## `v7.9.X` (UNRELEASED)
-
-.
-
-### Fixes
-
-.
-
-## `v7.9.0` (UNRELEASED)
-
-.
-
-### New Features
-
-.
+## v7.9.1 (UNRELEASED)
 
 ### Improvements
 
+#### Performance
 
+Fixed a performance regression that caused path lookup queries to return results significantly slower in `7.8` compared to `7.3`.
+
+#### Configurable Memory Limits for API & Discovery Services
+
+Memory limits for API and discovery services are now configurable and no longer fixed. This gives better control over resource usage and makes it easier to tune the system for different environments.
+
+The configured memory limits are logged and visible in the UI, providing better transparency during discoveries.
+
+If you encounter out-of-memory issues or need to **adjust memory limits** for your deployment, please contact IP Fabric Customer Support for guidance.
 
 #### Technology Tables
 
@@ -49,24 +45,20 @@ description: In this section, you can find the release notes for `v7.` releases.
 - **Virtual Servers** - **Path Rules** table under Load Balancing [**Technology → Load-balancing**](../../IP_Fabric_GUI/technology_tables/load_balancing.md#virtual-servers-path-rules).
 - **DNS** table under [**Technology → Cloud → Vendors → Azure**](../../IP_Fabric_GUI/technology_tables/cloud/vendors.md#azure).
 
-
-
-
-#### GUI
-
-.
-
 #### Path Lookup
 
-Path Lookup has been extended to support IPv6 for both Unicast and Host to Gateway scenarios. The following technologies are now supported for IPv6 path analysis: routing, security evaluation, 6in4, GRE, and IPsec. NAT and PBR are not yet supported for IPv6 lookups.
+Path Lookup has been extended to support IPv6 for both Unicast and Host to Gateway scenarios. The following technologies are now supported for IPv6 path analysis:
+routing, security evaluation, 6in4, GRE, and IPsec.
 
 ![release_7.9_ipv6_pathlookup.webp](../../images/miscellaneous/release_7.9_ipv6_pathlookup.webp)
+
+!!! warning "Limitations"
+
+    NAT and PBR are not yet supported for IPv6 lookups.
 
 Path Lookup has been extended to support Layer 3 routing between cloud-only devices with no interface names.
 
 ![release_7.9_cloud_routing_without_interface_in_e2e.webp](../../images/miscellaneous/release_7.9_cloud_routing_without_interface_in_e2e.webp)
-
-
 
 #### Vendor Support
 
@@ -74,14 +66,12 @@ Path Lookup has been extended to support Layer 3 routing between cloud-only devi
 - **GCP** -- Added support for VPC Network Peering configured between VPC networks in different Google Cloud projects.
 - **Azure** -- Improved security evaluation for Azure Firewall.
 
-### API Endpoint Deprecation
-
-.
-
 ### Experimental Features
 
-.
+#### Dedicated API Discovery Worker
 
-### Miscellaneous
+An experimental dedicated worker for API-based discovery is available. When enabled, it improves scalability and discovery performance for **API-only devices** by running API discovery independently from other discovery processes.
 
-.
+Discovery behavior and results remain unchanged. The solution includes built-in protections to respect vendor API rate limits and is designed to scale independently.
+
+This feature is **disabled by default**. Customers interested in evaluating it can **contact IP Fabric Customer Support** for more information and assistance with enabling it.
