Improvement from MR-1884 Added and Tested cross-link

--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -18,6 +18,7 @@ description: In this section, you can find the release notes for v7.9 releases.
 ### Google Cloud Platform (GCP)
 
 - Using separate Vendor API configurations to discover the Shared VPC host and service projects leads to inconsistent results. This will be fixed in a future release. 
+  More details regarding the issue can be seen [here](../../support/known_issues/Vendors/gcp.md).
 
 ## v7.9.1 (UNRELEASED)
 
