--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -17,7 +17,7 @@ description: In this section, you can find the release notes for v7.9 releases.
 
 ### Google Cloud Platform (GCP)
 
-- Using separate Vendor API configurations to discover the Shared VPC host and service projects leads to inconsistent results. This will be fixed in a future release. 
+- Using separate Vendor API configurations to discover the Shared VPC host and service projects leads to inconsistent results. This will be fixed in a future release.
   More details regarding the issue can be seen [here](../../support/known_issues/Vendors/gcp.md).
 
 ## v7.9.1 (UNRELEASED)
@@ -63,9 +63,16 @@ Path Lookup has been extended to support Layer 3 routing between cloud-only devi
 
 #### Vendor Support
 
-- **Check Point Gaia** -- Improved NTP data collection by supporting the  extended `ntpq` command, providing detailed NTP source information. For more details, see [Extend command to get better NTP results](../../support/known_issues/Vendors/checkpoint.md#extend-command-to-get-better-ntp-results).
+- **Check Point Gaia** -- Improved NTP data collection by supporting the extended `ntpq` command, providing detailed NTP source information. For more details, see [Extend command to get better NTP results](../../support/known_issues/Vendors/checkpoint.md#extend-command-to-get-better-ntp-results).
 - **GCP** -- Added support for VPC Network Peering configured between VPC networks in different Google Cloud projects.
 - **Azure** -- Improved security evaluation for Azure Firewall.
+
+#### Enhanced Password Security
+
+Password validation has been strengthened in both the UI and API.
+Passwords must be 8–200 characters long and include at least 3 of 5 character categories
+(uppercase, lowercase, numerals, special ASCII, Unicode alphabetic).
+More details on [Authentication page](../../IP_Fabric_API/authentication.md#password-requirements).
 
 ### Experimental Features
 
