Crossed 7.8 and 7.9 RNs, adjusted banners

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -4,14 +4,15 @@ description: In this section, you can find the release notes for v7.8 releases.
 
 # IP Fabric v7.8
 
-!!! danger "Unreleased Version"
-
-    This is an upcoming IP Fabric version, which has not been released yet and
-    is not available for download.
-
 --8<-- "snippets/upgrade_version_policy.md"
 
 --8<-- "snippets/clear_browser_cache.md"
+
+!!! Info "Version 7.8 Availability"
+
+    Version `7.8` was published but not promoted for upgrade or distributed via online updates.
+
+    Continue with the release notes for [`7.9`](7.9.md).
 
 ## Known Issues
 
