--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -4,14 +4,15 @@ description: In this section, you can find the release notes for v7.9 releases.
 
 # IP Fabric v7.9
 
-!!! danger "Unreleased Version"
-
-    This is an upcoming IP Fabric version, which has not been released yet and
-    is not available for download.
-
 --8<-- "snippets/upgrade_version_policy.md"
 
 --8<-- "snippets/clear_browser_cache.md"
+
+!!! Info "Version 7.8 Notice"
+
+    IP Fabric `7.9` follows directly after `7.5`. Version `7.8` was made available but not broadly promoted or delivered via online updates.
+
+    The `7.8` release notes are included [here](7.8.md) for reference, as its changes were incorporated into later releases.
 
 ## Known Issues
 
