LLRN, RN 7.9 finalization

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -166,26 +166,37 @@ If extensions are **not removed prior to the upgrade**, they will continue to ru
 
 - Snapshots from release `5.x` and earlier are not supported and may fail to load properly.
 
-## v7.5.13 (December 17th, 2025; GA)
+## v7.5.14 (January 14th, 2026; GA)
 
 ```
-SHA256 (ipfabric-update-7-5-13+0.tar.zst.sig) = 1c396791ffe161e30d0188550f186d4721f6a124ad6e7db1acceb3d3ff959332
-MD5 (ipfabric-update-7-5-13+0.tar.zst.sig) = dcb48eb9ec689e12d780daf9a915c5f9
-SHA256 (ipfabric-7-5-13+0.qcow2) = 8f69223e497d8534abcaa496a681df35d71524d26a12af8a63b7fd5f42ede103
-MD5 (ipfabric-7-5-13+0.qcow2) = 7479b1846e2e1984bdf99b6ea3d0570e
-SHA256 (ipfabric-7-5-13+0.vmdk) = b25622fe5373cc1128cf84cd15c8a10e4b7d78d781b38b9c256b8254c45b3133
-MD5 (ipfabric-7-5-13+0.vmdk) = 7c0524e8befad082c6b4c8f18102a257
-SHA256 (ipfabric-7-5-13+0.vhdx.zst) = 0d8b10032281151a159f34dadd45353fb3b0940c65eabcd8500f864c1cb08242
-MD5 (ipfabric-7-5-13+0.vhdx.zst) = 29359e3c7c473d63cb1b083fd1636c15
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-5-13+0.ova) = 085673bd966b805fd2a92ee6df4456388074c4015972a8ebb9b8df3c5ca49ee5
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-5-13+0.ova) = 4cffa954437b275465a1420e80b501ca
-SHA256 (unsupported-ESXi7.0-ipfabric-7-5-13+0.ova) = 9f1f9e50faff2041b1bce8733333f7c250f6f9b7902554be72f10e9acd126360
-MD5 (unsupported-ESXi7.0-ipfabric-7-5-13+0.ova) = 1143bb39d08031286682927df27c30ce
-SHA256 (ESXi8.0-ipfabric-7-5-13+0.ova) = 13a60e1f16f59a90c4b7d6e1470630110026d42d322b3b66dca72cf52cc84be0
-MD5 (ESXi8.0-ipfabric-7-5-13+0.ova) = 018f2aff5974e07d614cbc684a0112c2
+SHA256 (ipfabric-update-7-5-14+1.tar.zst.sig) = ca74407223cf2c242d53972cc87871789b8a3369eaadaed9022f0ad031b69157
+MD5 (ipfabric-update-7-5-14+1.tar.zst.sig) = b86dd4c916b0b6bb559a686bc2a01420
+SHA256 (ipfabric-7-5-14+1.qcow2) = 6de9ea17129cc73fa757f01e87bac52e0d6b734c59feb26f548c8a3869e97422
+MD5 (ipfabric-7-5-14+1.qcow2) = 1e65b95299cf6d06143153a4daaeda0d
+SHA256 (ipfabric-7-5-14+1.vmdk) = c45f2a94f655a3b995d05ee4f7435dc5b749e703dd591864eb7e37b0ca6dbfb9
+MD5 (ipfabric-7-5-14+1.vmdk) = 9bd48306d6c69df87cbbe5ae1c4c29da
+SHA256 (ipfabric-7-5-14+1.vhdx.zst) = ff8a9f940f4840f782b2d1b06f35664d723a1e334a9355139912e24caa993363
+MD5 (ipfabric-7-5-14+1.vhdx.zst) = fefd7b768528c2c1af4fa84b5c5bdb0f
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-5-14+1.ova) = c87277e86674c8d4a5361fe64c3f5db6d8e801ffa3c130471d877cf0a7d2f948
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-5-14+1.ova) = e6e3429d47584c00fd6c98a05651eb58
+SHA256 (unsupported-ESXi7.0-ipfabric-7-5-14+1.ova) = 3437ef7d50ef76e29ce07bb0234bd3d4359462a75dbd7b3e2cee60c9aa3242cb
+MD5 (unsupported-ESXi7.0-ipfabric-7-5-14+1.ova) = e0fd05830a753ef548b5b44b6816b569
+SHA256 (ESXi8.0-ipfabric-7-5-14+1.ova) = 3a7b909e192c67aeee0c457b45712711fd73eac67cb0624b9c2cff6785ab9441
+MD5 (ESXi8.0-ipfabric-7-5-14+1.ova) = eeac4fcc7486c0a47b1b0926b919fed1
 ```
 
 ### Bug Fixes
+
+- Fixed issue where **Inventory --> Host** table could not be searched by SN.
+- Fixed migration of Saved Path Checks so that the `graphs/path-lookup/checks/exists` endpoint correctly reports existing entries.
+- Corrected L1/L2 connection parsing for Alcatel devices that caused `diagrams/topology-tree` to show links via a transit node instead of the correct device.
+- Fixed upgrade failure caused by `INSERT INTO eHasApiScopes ... duplicate key value violates unique constraint` error during database migration.
+- Resolved migrations failing when importing stale snapshots that were not present in the GUI.
+
+## v7.5.13 (December 17th, 2025; GA)
+
+### Bug Fixes
+
 - Fixed obsolete manual links persisting in the graph after changing Site Separation manual links.
 - Improved error handling for duplicate Vendor API settings. A clear error message (`Entry already exists in the collection`) is now shown, and the duplicate entry must be removed before saving.
 - Fixed Host-to-Gateway lookup failure in Azure VNet Path Lookup.
