--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -21,7 +21,24 @@ description: In this section, you can find the release notes for v7.9 releases.
 - Using separate Vendor API configurations to discover the Shared VPC host and service projects leads to inconsistent results. This will be fixed in a future release.
   More details regarding the issue can be seen [here](../../support/known_issues/Vendors/gcp.md).
 
-## v7.9.1 (UNRELEASED)
+## v7.9.3 (January 14th, 2026; GA)
+
+```
+SHA256 (ipfabric-update-7-9-3+0.tar.zst.sig) = e636f2ebc41d51313face02628fabfada914107396f201626e90617cae338407
+MD5 (ipfabric-update-7-9-3+0.tar.zst.sig) = 7384714c5f33a898c387bc75ea6e2923
+SHA256 (ipfabric-7-9-3+0.qcow2) = 35aac5d53607b829b4ce5236c1af93ba1fd082d4c7649c81c36a0a5456213f5b
+MD5 (ipfabric-7-9-3+0.qcow2) = e2f8f80214870baacd68c12aafd55641
+SHA256 (ipfabric-7-9-3+0.vmdk) = 27a7e66afac5a98c22d32e98ae740a45ef30c5e9c81f7164fb3b163479173591
+MD5 (ipfabric-7-9-3+0.vmdk) = 05aa9efba7e8b6f15e1e5eedc6c438dc
+SHA256 (ipfabric-7-9-3+0.vhdx.zst) = 5a55aff66dbe7f811d1333aed9e755893b3ba30553f968c13f888cbad1da03ed
+MD5 (ipfabric-7-9-3+0.vhdx.zst) = 200530ac697a3d378518286075aa09ad
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-9-3+0.ova) = 98941c30df19cd7b67e1585c8a5615205695e976d15d2fe292a81d064c41613e
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-9-3+0.ova) = 7df26d3603788720f8e72251a7a1e051
+SHA256 (unsupported-ESXi7.0-ipfabric-7-9-3+0.ova) = 72cc6be2aef3a32854a982d55bee3ad0f7b0b2bf816fd0067f4969ee4018a36f
+MD5 (unsupported-ESXi7.0-ipfabric-7-9-3+0.ova) = 9fbb786e9487f8d6fe5b2a0d157c5c2c
+SHA256 (ESXi8.0-ipfabric-7-9-3+0.ova) = 6ff74b4198bdd92289489828a2e0293ea53ab035ea8f1472a4c61e553e7a0f4b
+MD5 (ESXi8.0-ipfabric-7-9-3+0.ova) = b23208b5da5947113baeb933b0745089
+```
 
 ### Improvements
 
