--- a/docs/releases/release_notes_low-level/7.x/7.5.md
+++ b/docs/releases/release_notes_low-level/7.x/7.5.md
@@ -6,7 +6,23 @@ search:
 
 # LLRN 7.5
 
-These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 992 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 1003 fixed issues.
+
+## 7.5.14
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-21984` -- Medium -- Inventory>Host table not searchable by SN
+- `NIM-22359` -- High -- [Huawei] Summary of Issues part1
+- `NIM-22373` -- High -- Saved Path Checks are not being migrated in version updates
+- `NIM-22457` -- High -- Connection visualized into transit instead of correct device - parsing issue for Alcatel
+- `NIM-22463` -- Medium -- [Huawei] Summary of Issues part2
+- `NIM-22516` -- Medium -- ABMapResultError: Couldn't validate DNS server: , Invalid value " " passed to getIpLongs()
+- `NIM-22521` -- Highest -- Unable to upgrade 7.5.13 to 7.8.3 or 7.9.0 due to INSERT INTO eHasApiScopes duplicate key value violates unique constraint
+- `NIM-22564` -- Highest -- Migrations failed during upgrade 7.3 to 7.5 due to old snapshot in snapshots folder
+- `NIM-22579` -- Highest -- Part 2 - Unable to upgrade 7.5.13 to 7.9.1 (7.9.0+187) due to INSERT INTO eHasApiScopes duplicate key value violates unique constraint
 
 ## 7.5.13
 
@@ -35,6 +51,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - `NIM-20958` -- Highest -- Syslog worker reaching heap / memory limit
+- `NIM-21156` -- Low -- Slow PSQL query getEVlanNoDesignatedId
 - `NIM-21683` -- High -- User with no rights gets `Unexpected Failure` error after login
 - `NIM-21695` -- Highest -- Unexpected API failure when loading STP instance members
 - `NIM-21889` -- Highest -- E2E pathlookup - double zoneFw evaluation with different results
@@ -186,6 +203,12 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 
 ## 7.5.8
 
+### Epics
+
+Epics are high-level features, that may consist of many tasks.
+
+- `NIM-22503` -- Medium -- Fix and Redesign Scanner behavior [7.8]
+
 ### Bugs
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
@@ -275,7 +298,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-20909` -- Medium -- IPF 7.5 Frontend cache flushing
 - `NIM-20920` -- Highest -- Updater reaches heap allocation limit while loading snapshot with full BGP tables
 - `NIM-20963` -- Medium -- neighbors/unidirectional API table is very slow (502)
-- `NIM-20964` -- Medium -- Azure API client returns null
+- `NIM-20964` -- Medium -- Azure API client returns null - vWAN virtual Hub
 - `NIM-20972` -- Highest -- Saved Path Check API not working as expected
 - `NIM-20997` -- Medium -- Junos interfaces in the IPF GUI show the speed type as “fixed”, but the interfaces have auto-negotiation enabled.
 - `NIM-21027` -- High -- Huawei tasks/deviceConfig/startup ABTaskMapResultError - Saved config consistency not working
