--- a/docs/releases/release_notes_low-level/7.x/7.8.md
+++ b/docs/releases/release_notes_low-level/7.x/7.8.md
@@ -6,7 +6,7 @@ search:
 
 # LLRN 7.8
 
-These are low-level release notes for IP Fabric release branch `7.8`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 732 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.8`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 734 fixed issues.
 
 ## 7.8.3
 
@@ -24,6 +24,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-21643` -- High -- Cannot save Discovery Settings: "Entry already exists in the collection" (Vendor API)
 - `NIM-21966` -- High -- Duplex Mismatch status filtering is broken
 - `NIM-21997` -- Highest -- Graph crash when expanding dual-stack hosts (duplicate nodes from multiple IP addresses)
+- `NIM-22077` -- Medium -- ipf-sso-setup-helper creates backup of SSL certs even when No is chosen
 - `NIM-22197` -- High -- NX-OS - Missing routes
 - `NIM-22281` -- Medium -- Default action is wrong in GCP ACL evaluation
 - `NIM-22285` -- Medium -- Change family for 3com Baseline Switch 2928
@@ -165,6 +166,7 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-21755` -- Medium -- Cloud native icons - discovery [7.8]
 - `NIM-21788` -- High -- GCP API settings & Multi-tenancy improvements [7.8]
 - `NIM-21859` -- High -- Azure Mapping failures
+- `NIM-22503` -- Medium -- Fix and Redesign Scanner behavior [7.8]
 
 ### Stories
 
@@ -344,7 +346,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-20949` -- High -- Vendors API settings import to postgres doesn't work
 - `NIM-20953` -- High -- Long time getting snapshot logs
 - `NIM-20960` -- Highest -- Azure Discovery - hubRouteTables command causing slowness
-- `NIM-20964` -- Medium -- Azure API client returns null
+- `NIM-20964` -- Medium -- Azure API client returns null - vWAN virtual Hub
 - `NIM-20966` -- Highest -- Scanner not working as expected [7.8]
 - `NIM-20968` -- Medium -- ABTaskMapResultError: "stpData[3].vlanId" must be a number
 - `NIM-20972` -- Highest -- Saved Path Check API not working as expected
