upgrade-path-7.3-7.5-change

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -6,7 +6,7 @@ description: In this section, you can find the release notes for `v7.5` releases
 
 !!! danger "Upgrade Notice"
 
-    An upgrade to `7.5.x` or later is **only** possible from release `7.3.23` or newer.
+    An upgrade to `7.5.x` or later is **only** possible from release `7.3.25 or newer.
 
     When upgrading to `7.5` release, database will be migrated from **ArangoDB** to **PostgreSQL**.
 
