This MR serve for training purposes

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -185,6 +185,14 @@ SHA256 (ESXi8.0-ipfabric-7-5-14+1.ova) = 3a7b909e192c67aeee0c457b45712711fd73eac
 MD5 (ESXi8.0-ipfabric-7-5-14+1.ova) = eeac4fcc7486c0a47b1b0926b919fed1
 ```
 
+### Bug Fixes
+
+- Fixed issue where **Inventory --> Host** table could not be searched by SN.
+- Fixed migration of Saved Path Checks so that the `graphs/path-lookup/checks/exists` endpoint correctly reports existing entries.
+- Corrected L1/L2 connection parsing for Alcatel devices that caused `diagrams/topology-tree` to show links via a transit node instead of the correct device.
+- Fixed upgrade failure caused by `INSERT INTO eHasApiScopes ... duplicate key value violates unique constraint` error during database migration.
+- Resolved migrations failing when importing stale snapshots that were not present in the GUI.
+
 ## v7.5.13 (December 17th, 2025; GA)
 
 ### Bug Fixes
