manual cherry pick from 1916

--- a/docs/releases/release_notes_low-level/7.x/7.9.md
+++ b/docs/releases/release_notes_low-level/7.x/7.9.md
@@ -15,13 +15,13 @@ These are low-level release notes for IP Fabric release branch `7.9`. Please not
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - `NIM-22511` -- Highest -- Configuration Management table slow PSQL query and timeout in GUI
-- `NIM-22579` -- Highest -- Part 2 - Unable to upgrade 7.5.13 to 7.9.1 (7.9.0+187) due to INSERT INTO eHasApiScopes duplicate key value violates unique constraint
+- `NIM-22579` -- Highest -- Unable to upgrade 7.5.13 to 7.9.1 (7.9.0+187) due to INSERT INTO eHasApiScopes duplicate key value violates unique constraint
 
 ### Tasks
 
 Task may be associated into Epics or Stories to form complex features.
 
-- `NIM-19044` -- Highest -- 4 - Critical - Insecure Password Complexity Requirements
+- `NIM-19044` -- Highest -- Insecure Password Complexity Requirements
 
 ### Sub-Tasks
 
@@ -100,7 +100,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-20937` -- High -- Obsolete manual links appear in the graph
 - `NIM-20958` -- Highest -- Syslog worker reaching heap / memory limit
 - `NIM-21043` -- High -- Fortigate - routing exception in E2EPL
-- `NIM-21156` -- Low -- Slow PSQL query getEVlanNoDesignatedId
+- `NIM-21156` -- Low -- [PSQL] Slow PSQL query getEVlanNoDesignatedId
 - `NIM-21611` -- Highest -- Meraki AP failing to init in pathlookup and find a next hop
 - `NIM-21643` -- High -- Cannot save Discovery Settings: "Entry already exists in the collection" (Vendor API)
 - `NIM-21679` -- Highest -- Azure vnet - Host to Gateway lookup fails
@@ -179,7 +179,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-22402` -- Medium -- GCP - Public IPs are not collected from all GCP projects
 - `NIM-22419` -- High -- Checkpoint Gaia: NTP synchronization info from expert mode
 - `NIM-22423` -- Medium -- GCP serverless access connectors runServices not in UI
-- `NIM-22434` -- Highest -- Query builder -- if-def not defined in query
+- `NIM-22434` -- Highest -- [PSQL] Query builder -- if-def not defined in query
 - `NIM-22436` -- Medium -- VM public IPs not visible in cloud public IPs table
 - `NIM-22440` -- Medium -- GCP Firewall blocks load balancer communication between public frontend and backends
 - `NIM-22472` -- Medium -- Incorrect date picker component behavior in the /reports/network-analysis-report
@@ -191,7 +191,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-11539` -- Medium -- Create new cron component
 - `NIM-15556` -- Medium -- IPv6 NDP proxy - check setting for proxy boolean based on customer data
 - `NIM-17339` -- Medium -- Run ANALYZE on partitions only
-- `NIM-19685` -- Medium -- Azure Application Gateway – URL/Path based rules [VirtualServer task]
+- `NIM-19685` -- Medium -- Azure Application Gateway – URL/Path based rules
 - `NIM-19764` -- High -- Cloud - nexthop must include outgoing interface
 - `NIM-19766` -- Low -- Upgrade Storybook to v10
 - `NIM-19880` -- Medium -- Import VictoriaMetrics data from the techsupport
@@ -225,31 +225,31 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-21903` -- Medium -- PH2 Add leave dialog status to the GUI
 - `NIM-21940` -- Medium -- Discovery - Authentication - Negotiate with UX and fix tabs design
 - `NIM-21973` -- Highest -- Add support for Discovery History export/import
-- `NIM-22012` -- Medium -- [MCP] API Search - improve search algorithm concerning full text search
+- `NIM-22012` -- Medium -- API Search - improve search algorithm concerning full text search
 - `NIM-22017` -- Medium -- OUI - Hewlett Packard Enterprise missing
-- `NIM-22019` -- Medium -- [MCP] Implement network_health_aggregator tool for unified network health score
+- `NIM-22019` -- Medium -- Implement network_health_aggregator tool for unified network health score
 - `NIM-22026` -- High -- Rewrite snapshot loading script to meet our code quality standards
 - `NIM-22048` -- Highest -- PH2 Authentication tabs in Config Wizard step #1
 - `NIM-22049` -- High -- Azure Firewall - add support for natPreRouting at rule level [7.9]
-- `NIM-22091` -- Medium -- [MCP] Analyze how to implement network_health_aggregator tool
-- `NIM-22094` -- Medium -- [MCP] Improve input parameters for pathlookup tools
+- `NIM-22091` -- Medium -- Analyze how to implement network_health_aggregator tool
+- `NIM-22094` -- Medium -- Improve input parameters for pathlookup tools
 - `NIM-22109` -- Medium -- Use ACI device type (leaf / spine) in pathlookup instead of icon
 - `NIM-22114` -- Medium -- Update devType for cloud artificial devices
 - `NIM-22146` -- Medium -- [ipf-checker] - change HW requirements in 7.3 to the ones published for 7.5
-- `NIM-22154` -- Medium -- GCP Application Load Balancer - URL/Path based rules [VirtualServer task]
+- `NIM-22154` -- Medium -- GCP Application Load Balancer - URL/Path based rules
 - `NIM-22167` -- Medium -- Create new view/tab in virtualServer table
 - `NIM-22198` -- Medium -- CHREP/Sentry - adjust error tester regexes (2025/11)
 - `NIM-22212` -- Medium -- Fix minor UI issues
-- `NIM-22230` -- Highest -- Display load balancing rule in raw format [7.9]
-- `NIM-22267` -- Medium -- Investigate Query Builder performance
+- `NIM-22230` -- Highest -- Display load balancing rule in raw format
+- `NIM-22267` -- Medium -- [PSQL] Investigate Query Builder performance
 - `NIM-22270` -- Medium -- add more e2e tests for IPv6
-- `NIM-22293` -- High -- Query builder: optimize row counts
+- `NIM-22293` -- High -- [PSQL] Query builder: optimize row counts
 - `NIM-22304` -- High -- Fix VRF typeahead in the path-lookup
 - `NIM-22312` -- Medium -- Show ICMPv6 option on UI
-- `NIM-22315` -- Medium -- [MCP] Write runbooks to improve tools usage
+- `NIM-22315` -- Medium -- Write runbooks to improve tools usage
 - `NIM-22344` -- Medium -- Azure Firewall - update packet selectors [7.9]
 - `NIM-22366` -- Medium -- GCP Application Load Balancer - e2e not working
-- `NIM-22370` -- Medium -- [MCP] Add documentation for end users
+- `NIM-22370` -- Medium -- Add documentation for end users
 - `NIM-22391` -- Highest -- Create a dedicated API worker
 - `NIM-22397` -- Medium -- Bootstrap topology testing service
 - `NIM-22403` -- Medium -- GCP Update sn task so that self links are seen as serial numbers instead of IDs
