NIM-22491 Password Reset with Re-authentication

--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -92,6 +92,13 @@ Passwords must be 8–200 characters long and include at least 3 of 5 character 
 (uppercase, lowercase, numerals, special ASCII, Unicode alphabetic).
 More details on [Authentication page](../../IP_Fabric_API/authentication.md#password-requirements).
 
+#### Password Change Verification
+
+When changing a password, users are now required to provide their current password for verification.
+This additional security measure helps prevent unauthorized password changes if a session is compromised or left unattended.
+The user must have admin privileges, and the password must match the current session. If an incorrect password is provided,
+the session will be immediately invalidated and the user will be logged out.
+
 ### Experimental Features
 
 #### Dedicated API Discovery Worker
