--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -40,6 +40,16 @@ SHA256 (ESXi8.0-ipfabric-7-9-3+0.ova) = 6ff74b4198bdd92289489828a2e0293ea53ab035
 MD5 (ESXi8.0-ipfabric-7-9-3+0.ova) = b23208b5da5947113baeb933b0745089
 ```
 
+### Behavioral Changes
+
+#### User-Specific Saved Diagrams
+
+Saved Diagrams are now user-specific and private to each user. Users can only view and manage their own saved diagrams.
+
+!!! warning "Data Loss on User Deletion"
+
+    If a user is deleted, all saved diagrams created by that user are permanently deleted and cannot be recovered. 
+
 ### Improvements
 
 #### Performance
